final/backend-service-clusterip-template.yaml
apiVersion: v1

kind: Service

metadata:
    name: mybackend-service

spec:
    type: ClusterIP
    ports:
        - targetPort: 5000
          port: 5000

    selector:
        app:  my-backend
        type: backend
