final/postgres-service-clusterip.yaml
apiVersion: v1

kind: Service

metadata:
    name: my-postgres-service

spec:
    type: ClusterIP
    ports:
        - targetPort: 5432
          port: 5432

    selector:
        app:  my-postgres
        type: db
