final/redis-service-clusterip.yaml
apiVersion: v1

kind: Service

metadata:
    name: my-redis-service

spec:
    type: ClusterIP
    ports:
        - targetPort: 6379
          port: 6379

    selector:
        app:  my-redis
        type: cache
